# PortableNeovimManager

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: archive.rs  cli.rs  config.rs  font.rs  github.rs  instance.rs  main.rs  monitor.rs  neovim.rs  runtime.rs  workload.rs
src/font/: alacritty.rs  gnome_terminal.rs  iterm2.rs  kitty.rs  konsole.rs  mod.rs  terminal.rs  wt.rs
src/mason_registry/: fetch.rs  model.rs
src/plugins/: init_defaults.rs  init_lua.rs  mod.rs
src/tui/: app.rs  command.rs  lua_highlight.rs  mod.rs  state.rs  ui.rs
src/tui/menu/: bar.rs  definitions.rs  function_bar.rs  mod.rs
src/tui/screens/: confirm_delete.rs  create.rs  edit_features.rs  edit_leader.rs  init_config.rs  instance_detail.rs  instance_list.rs  marketplace.rs  mod.rs  monitor.rs  settings.rs  terminal_font.rs  tutorial.rs
src/workload/: defaults.rs  loader.rs  mod.rs  model.rs
