[package]
name = "portable-neovim-manager"
version = "1.2.0"
edition = "2024"

[[bin]]
name = "pnm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
flate2 = "1"
tar = "0.4"
dirs = "6"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
futures-util = "0.3"
bytes = "1.11.1"
