[package]
name = "portable-neovim-manager"
version = "1.2.0"
edition = "2024"

[[bin]]
name = "pnm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
dirs = "6"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
futures-util = "0.3"
bytes = "1.11.1"
sysinfo = { version = "0.34", default-features = false, features = ["system"] }
json_comments = "0.2"
toml_edit = "0.22"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
